fix(gtk): fix alignment issues with nautilus sidebar in gnome v50

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -4170,53 +4170,52 @@ stacksidebar row {
 placessidebar {
   background-color: transparent;
   background-image: linear-gradient(to right, #232831 40px, #2e3440 35px, #2e3440 36px, #2e3440 36px, #2e3440 99%, #2e3440 100%); }
-  placessidebar row {
-    padding: 1px 11px; }
-    placessidebar row.sidebar-row {
-      margin: 0;
-      border-radius: 0;
-      color: #d8dee9; }
-      placessidebar row.sidebar-row label {
-        color: #d8dee9;
-        padding-left: 30px; }
-      placessidebar row.sidebar-row:hover {
-        transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        background-color: transparent;
-        /*rgba(65,67,75,0.4); */
-        background-image: linear-gradient(to right, rgba(65, 67, 75, 0) 40px, rgba(0, 0, 0, 0.12) 40px, rgba(0, 0, 0, 0.12) 97%); }
-      placessidebar row.sidebar-row:active:hover {
-        background-color: rgba(0, 0, 0, 0.23); }
-      placessidebar row.sidebar-row:selected {
-        color: #fff;
+  placessidebar row.activatable {
+    padding: 1px 11px;
+    margin: 0;
+    border-radius: 0;
+    color: #d8dee9; }
+    placessidebar row.activatable label {
+      color: #d8dee9;
+      padding-left: 25px; }
+    placessidebar row.activatable:hover {
+      transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+      background-color: transparent;
+      /*rgba(65,67,75,0.4); */
+      background-image: linear-gradient(to right, rgba(65, 67, 75, 0) 40px, rgba(0, 0, 0, 0.12) 40px, rgba(0, 0, 0, 0.12) 97%); }
+    placessidebar row.activatable:active:hover {
+      background-color: rgba(0, 0, 0, 0.23); }
+    placessidebar row.activatable:selected {
+      color: #fff;
+      background-color: transparent;
+      background-image: linear-gradient(to right, #81a1c1 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
+      placessidebar row.activatable:selected label {
+        color: #81a1c1; }
+      placessidebar row.activatable:selected:hover {
+        color: #ffffff;
+        background-color: rgba(0, 0, 0, 0.24); }
+        placessidebar row.activatable:selected:hover .sidebar-icon {
+          color: #ffffff; }
+      placessidebar row.activatable:selected:backdrop {
+        color: rgba(0, 0, 0, 0.54);
         background-color: transparent;
         background-image: linear-gradient(to right, #81a1c1 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-        placessidebar row.sidebar-row:selected label {
-          color: #81a1c1; }
-        placessidebar row.sidebar-row:selected:hover {
-          color: #ffffff;
-          background-color: rgba(0, 0, 0, 0.24); }
-          placessidebar row.sidebar-row:selected:hover .sidebar-icon {
-            color: #ffffff; }
-        placessidebar row.sidebar-row:selected:backdrop {
-          color: rgba(0, 0, 0, 0.54);
-          background-color: transparent;
-          background-image: linear-gradient(to right, #81a1c1 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-          placessidebar row.sidebar-row:selected:backdrop .sidebar-icon {
-            -gtk-icon-shadow: none;
-            color: inherit; }
-        placessidebar row.sidebar-row:selected .sidebar-icon {
-          -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
+        placessidebar row.activatable:selected:backdrop .sidebar-icon {
+          -gtk-icon-shadow: none;
           color: inherit; }
-      placessidebar row.sidebar-row.sidebar-new-bookmark-row, placessidebar row.sidebar-row.sidebar-new-bookmark-row label, placessidebar row.sidebar-row.sidebar-new-bookmark-row .sidebar-icon {
-        color: #ebcb8b; }
-      placessidebar row.sidebar-row:drop(active):not(:disabled) {
-        box-shadow: inset 0 1px #a3be8c, inset 0 -1px #a3be8c; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled), placessidebar row.sidebar-row:drop(active):not(:disabled) label, placessidebar row.sidebar-row:drop(active):not(:disabled) image {
-          color: #a3be8c; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled):selected {
-          background: #a3be8c; }
-          placessidebar row.sidebar-row:drop(active):not(:disabled):selected, placessidebar row.sidebar-row:drop(active):not(:disabled):selected label, placessidebar row.sidebar-row:drop(active):not(:disabled):selected image {
-            color: #fefefe; }
+      placessidebar row.activatable:selected .sidebar-icon {
+        -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
+        color: inherit; }
+    placessidebar row.activatable.sidebar-new-bookmark-row, placessidebar row.activatable.sidebar-new-bookmark-row label, placessidebar row.activatable.sidebar-new-bookmark-row .sidebar-icon {
+      color: #ebcb8b; }
+    placessidebar row.activatable:drop(active):not(:disabled) {
+      box-shadow: inset 0 1px #a3be8c, inset 0 -1px #a3be8c; }
+      placessidebar row.activatable:drop(active):not(:disabled), placessidebar row.activatable:drop(active):not(:disabled) label, placessidebar row.activatable:drop(active):not(:disabled) image {
+        color: #a3be8c; }
+      placessidebar row.activatable:drop(active):not(:disabled):selected {
+        background: #a3be8c; }
+        placessidebar row.activatable:drop(active):not(:disabled):selected, placessidebar row.activatable:drop(active):not(:disabled):selected label, placessidebar row.activatable:drop(active):not(:disabled):selected image {
+          color: #fefefe; }
   placessidebar list {
     background-color: transparent; }
     placessidebar list:backdrop {
